# API-with-FastAPI

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0f8542fa1ff0_add_owner_id_column_to_posts.py  34e31fabe115_auto_create_votes_table.py  97e01b4eb75b_add_phone_number_column_to_users.py  9870ef9afb3e_add_content_column_to_posts.py  b9bd290a46fb_create_users_table.py  e2c3bc987ebc_create_posts_table.py
app/: database.py  main.py  oauth2.py  utils.py
app/configs/: config.py
app/models/: post.py  user.py  vote.py
app/routers/: auth.py  post.py  user.py  vote.py
app/schemas/: base.py  post.py  user.py  vote.py
